# pyclesperanto_prototype

./: .gitignore  .gitmodules  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  benchmarking.ipynb  cle_test.py  deploy.bat  napari_clij_widget.py  playground.py  setup.cfg  setup.py  te_oki.py  test.tif  test_add_images.py  test_threshold_images.py  tests.py  tox.ini
benchmarks/: affine_transforms-2d.ipynb  affine_transforms.ipynb  apple_m1_voronoi_otsu_labeling.ipynb  backends.ipynb  benchmark_statistics_of_labeled_pixels.ipynb  benchmarking.ipynb  benchmarking_centroids_of_labels.ipynb  benchmarking_some_operations.ipynb  comparison_with_numpy_1.19.3.ipynb  comparison_with_skimage_0.18.0.ipynb  connected_component_labeling.ipynb  convolution.ipynb  deskewing.ipynb  extend_labels.ipynb  gaussian_blur.ipynb  histograms.ipynb  intensity_projections.ipynb  interp_test2.ipynb  matrix_multiplication.ipynb  mean_filter.ipynb  nonzero.ipynb  pixelwise_comparison.ipynb  replace_labels.ipynb  statistics_of_labeled_pixels.ipynb  threshold_otsu.ipynb  top_hat.ipynb  transpose.ipynb
clesperanto/: __init__.py  addImageAndScalar.py  add_image_and_scalar_2d_x.cl  add_image_and_scalar_3d_x.cl  add_images_weighted_2d_x.cl  add_images_weighted_3d_x.cl  maximum_sphere_3d_x.cl  multiply_matrix_x.cl  preamble.cl  set_2d_x.cl
container/: docker-compose.yml  environment.yaml  pyclesperanto.dockerfile  runner.sh
data/: 45_CamA_ch0_stack0006_488nm_0016799msec_0013438399msecAbs-1.md  EM_C_6_c0-1.tif-image data source.txt  RBC_1_timepoint_data_source.txt  blobs.tif  membranes.tif  (+13 more)
(+1611 files in other folders)
