[metadata]
name = pyclesperanto_prototype
version = 0.19.4
author = Robert Haase
author_email = robert.haase@tu-dresden.de
url = https://github.com/clEsperanto/pyclesperanto_prototype
license = BSD-3-Clause
description = GPU-accelerated image processing in python using OpenCL
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/clEsperanto/pyclesperanto_prototype/issues
    Documentation = https://github.com/clEsperanto/pyclesperanto_prototypes#README.md
    Source Code = https://github.com/clEsperanto/pyclesperanto_prototypes
    User Support = https://github.com/clEsperanto/pyclesperanto_prototypes/issues

[options]
packages = pyclesperanto_prototype
python_requires = >=3.6

# add your package requirements here
install_requires =
    numpy!=1.19.4
    pyopencl
    toolz
    scikit-image>=0.18.0
    matplotlib
    transforms3d
